# PDI-engenharia-de-dados

./: .gitignore  Makefile  README.md  pyproject.toml  teste.py
airflow/: docker-compose.yaml
airflow/dags/: teste_varias_tasks.py  tp4-1.py  tp4-2.py  tp4-3.py
db_data/: carros.csv  clientes.csv  db.sql  funcionarios.csv  vendas.csv
