[tool.poetry]
name = "pdi-engenharia"
version = "0.1.0"
description = ""
authors = ["Thomas Esteves <thomasesteves95@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
pyspark = "3.4"
apache-airflow = "^2.9.0"
pyarrow = "^16.0.0"
parquet-tools = "^0.2.16"
apache-airflow-providers-postgres = "^5.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
